[package]
authors = ["Ulrik Pedersen"]
edition = "2018"
readme = "README.md"
name = "gadget"
version = "0.1.0"
description = "Board support package for the STM32F3DISCOVERY board"
repository = "https://github.com/ulrikpedersen/gadget"
documentation = "https://github.com/ulrikpedersen/gadget/blob/main/README.md"
categories = ["embedded", "no-std"]
keywords = ["discovery", "stm32f3", "gadget"]
license = "Apache-2.0"
exclude = [
    ".vscode/*",
]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-itm = "0.4.2"

log = { version = "0.4.14" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cortex-m-log = { version = "0.7.0", features = ["itm", "log-integration"] }

shared-bus = "0.2.0"  # shared-bus for sharing i2c between multiple device drivers: https://blog.rahix.de/001-shared-bus/
bme280 = "0.2.1"
ssd1306 = "0.5.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "gadget"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
